# chksum-cli

./: .gitignore  README.md  chksum.py  pyproject.toml  requirements.txt
chksum/: __main__.py  chksum.py  launcher.py
src/chksum/: __main__.py  chksum.py
src/chksum_cli/: __init__.py  __main__.py  chksum.py  launcher.py
test/: test.py
test/dir_1/: .dot.txt  foo.txt
test/dir_2/: bar.txt
